updated game to use fixed states